# ML_Project_Torch

./: Beyond_LRA_benchmarks.ipynb  CMS_implementation.ipynb  Mamba_exploration.ipynb  PROJECT_ABSTRACT.md  README.md  running_on_LRA.ipynb  simpler_Beyond_LRA_benchmarks.ipynb  simpler_running_on_LRA.ipynb
LRA_scripts/: README.md  generate_acl_retrieval.py  generate_cifar10.py  generate_imdb.py  generate_listops.py  generate_pathfinder.py  generate_pathx.py  pyproject.toml
advanced_benchmarks/: babilong.py  based_recall.py  helmet.py  induction_heads.py  longbench.py  mad_benchmark.py  mqar.py  phonebook_lookup.py  selective_copying.py  state_tracking.py
epochs_10_40_notebooks/: 40_epoch_training_semi_final_running_on_LRA.ipynb  epoch_10_running_on_LRA.ipynb  epoch_10_simpler_running_on_LRA.ipynb  epoch_40_Beyond_LRA_benchmarks.ipynb  epoch_40_simpler_Beyond_LRA_benchmarks.ipynb
semi_final_notebooks/: semi_final_Beyond_LRA_benchmarks.ipynb  semi_final_running_on_LRA.ipynb  semi_final_simpler_Beyond_LRA_benchmarks.ipynb  semi_final_simpler_running_on_LRA.ipynb
