[project]
name = "lra-scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.8.4",
    "huggingface-hub>=1.8.0",
    "numpy>=2.4.4",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
]
